# wfcrai-agent-utils

./: .gitignore  README.md  connectors.py  dockerfile  makefile  pyproject.toml
.github/workflows/: build-and-publish.yaml
agent_utils/: logging_utils.py
agent_utils/components/: assistant.py  confluence_parser.py
agent_utils/connectors/: __init__.py  bq_connector.py  confluence_connector.py  fs_connector.py  gcs_connector.py  llm_connector.py  openai_connector.py
agent_utils/schemas/: data_agent_schema.py  models.py
tests/: confluence_context.json
