[project]
name = "wfcrai-agent-utils"
version = "0.0.1"
description = "Agent utilities and connectors package"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openai>=1.65.0",
    "atlassian-python-api>=4.0.0",
    "dotenv>=0.9.9",
    "google-cloud-bigquery>=3.31.0",
    "langfuse>=2.60.2",
    "toml>=0.10.2",
    "google-cloud-storage>=2.18.0,<3.0.0",
    "google-cloud-firestore>=2.20.1",
]

[[tool.uv.index]]
name = "wfcrai-agent-utils-gar"
url = "https://us-central1-python.pkg.dev/gcp-wow-food-wfc-ai-dev/wfcrai-agent-utils"
publish-url = "https://us-central1-python.pkg.dev/gcp-wow-food-wfc-ai-dev/wfcrai-agent-utils"
